--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -2,7 +2,7 @@
 <h3>Name: <%= @recipe.name %> </h3><br>
 <h3>Ingredients: <%= @recipe.ingredients %> </h3><br>
 <h3>Cook_time: <%= @recipe.cook_time %> </h3><br>
-<form action="recipes/<%=@recipe.id" method="post">
+<form action="recipes/<%=@recipe.id %>" method="post">
   <input id="hidden" type="hidden" name="_method" value="delete"><br>
   <h4> Delete this recipe </h4>
   <input type="submit" value="delete">
