--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -1,4 +1,7 @@
 <h3> edit your recipe </h3>
+<h3>Name: <%= @recipe.name %> </h3><br>
+<h3>Ingredients: <%= @recipe.ingredients %> </h3><br>
+<h3>Cook_time: <%= @recipe.cook_time %> </h3><br>
 <form action="/recipes/<%= @recipe.id %>" method="post">
   <input id="hidden" type="hidden" name="_method" value="patch">
   <p>Name: </p>
